# agy-adk-python

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.agents/knowledge/: adk-best-practices.md  agent-specification-template.md
.agents/rules/: adk-versioning.md  environment-isolation.md
.agents/workflows/: deploy-to-agent-engine.md  run-evals.md  setup-mcp-server.md  start-dev-server.md
scripts/: check_venv.sh
