[project]
name = "adk-agent-template"
version = "0.1.0"
description = "A template for building Python ADK agents."
dependencies = [
    "google-adk>=0.1.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
